Work experience alignment fix

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -55,3 +55,6 @@
   }
   
   
+.role .description {
+  text-align: justify;
+}
